# anomaly-detector

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT_READINESS.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  PHASE_MAPPING.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  V1_1_BACKLOG.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: .env.example  PHASE_7_GUIDE.md  PHASE_7_INTEGRATION_EXAMPLES.py  PHASE_8_COMPLETE.md  PHASE_8_PLAN.md  PHASE_8_SUMMARY.md  PHASE_9_COMPLETE.md  PHASE_9_TESTING.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-test.txt
backend/src/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/src/api/: __init__.py  anomalies.py  audit_logs.py  categories.py  users.py  websocket.py
backend/src/middleware/: __init__.py  rbac.py
backend/src/ml/: __init__.py  anomaly_model.py
backend/src/schemas/: anomaly.py  category.py  user.py
backend/src/services/: __init__.py  anomaly_broadcaster.py  anomaly_detector.py  audit_logger.py  auth_service.py  batch_processor.py  event_manager.py  monitoring.py  websocket_handler.py
backend/src/utils/: csv_utils.py
backend/tests/: README.md  conftest.py  test_anomaly_service.py  test_auth.py  test_ml_service.py  test_monitoring.py  test_rbac.py
backend/tests/integration/: test_api_endpoints.py  test_websocket.py
backend/tests/load/: load_testing.py
backend/tests/unit/: test_services.py
frontend/: .env.example  .eslintrc.json  PHASE_6_FINAL_SUMMARY.md  PHASE_6_SUMMARY.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  NotificationListener.tsx  ui.tsx
frontend/src/hooks/: index.ts
frontend/src/pages/: Anomalies.tsx  AuditLogs.tsx  Dashboard.tsx  Login.tsx  Register.tsx  Settings.tsx  Users.tsx
frontend/src/services/: api.ts  authStore.ts  notificationsStore.ts  themeStore.ts  websocket.ts
frontend/src/types/: index.ts
specs/001-anomaly-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-anomaly-dashboard/checklists/: design-quality.md  requirements.md
specs/001-anomaly-dashboard/contracts/: api-endpoints.md  auth-roles.md  data-schemas.md
